--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
   background-color: #111E24;
 }
 
-.main-heading {
+#main-heading {
   color: #93BAE3;
   font-family: 'Abel', sans-serif;
   font-size: 36px;
@@ -24,11 +24,9 @@ body {
   margin-right: auto;
   width: 80%;
   height: 511.5px;
-  /* opacity: 0.2; */
   position:absolute;
   top: 0px;
   left: 0px;
-  z-index: 1;
   top: 50%;
   left: 50%;
   margin-right: -50%;
@@ -36,50 +34,59 @@ body {
   margin: 0;
 }
 
-.menu-bar {
-  position: fixed;
-  /* position: absolute; */
-  top: 150px;
-  left: 20px;
-  z-index: 3;
-}
-
 .background-image {
   width: 100%;
   display: block;
   position: relative;
   top: 768px;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
-.heading {
+#heading-1 {
   color: #93BAE3;
   font-family: 'Abel', sans-serif;
-  font-size: 36px;
+  font-size: 48px;
   line-height: 48px;
   font-weight: 400;
   position: absolute;
   padding-left: 59.3%;
   padding-top: 5%;
-  z-index: 5;
+}
+
+#heading-2 {
+  color: #93BAE3;
+  font-family: 'Abel', sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
+  position: absolute;
+  padding-left: 59.3%;
+  padding-top: 5%;
+}
+
+#heading-3 {
+  color: #93BAE3;
+  font-family: 'Abel', sans-serif;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
+  position: absolute;
+  padding-left: 59.3%;
+  padding-top: 5%;
 }
 
 p {
-  font-family: 'Abel', sans-serif;
   color: white;
   position: absolute;
-  z-index: 7;
-  width: 350px;
+  width: 435px;
   line-height: 25px;
   padding-left: 60%;
   padding-top: 22%;
-  font-size: 16px;
-  /* font-family: 'Quicksand', sans-serif; */
-  font-family: 'Didact Gothic', sans-serif;
+  font-size: 18px;
+  font-family: 'Karla', sans-serif;
 }
 
-.iphone-image {
-  z-index: 6;
+#iphone-image {
   position: relative;
   width: 50%;
   top: 768px;
@@ -91,7 +98,6 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
-  /* margin: 1em 0; */
   position: relative;
   top: 150px;
   width: 6%;
@@ -100,12 +106,11 @@ hr {
 
 .app-1-title {
   font-family: 'Abel', sans-serif;
-  color: white;
+  color: #93BAE3;
   position: absolute;
-  z-index: 7;
   width: 350px;
   line-height: 25px;
-  padding-left: 45%;
+  padding-left: 40%;
   padding-top: 10%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
@@ -114,19 +119,19 @@ hr {
 .app-1-desc {
   width: 264px;
   text-align: right;
-  padding-left: 38%;
+  padding-left: 33%;
   padding-top: 14%;
   font-size: 12px;
+  line-height: 20px;
 }
 
 .app-2-title {
   font-family: 'Abel', sans-serif;
-  color: white;
+  color: #93BAE3;
   position: absolute;
-  z-index: 7;
   width: 350px;
   line-height: 25px;
-  padding-left: 45%;
+  padding-left: 40%;
   padding-top: 20%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
@@ -135,9 +140,10 @@ hr {
 .app-2-desc {
   width: 264px;
   text-align: right;
-  padding-left: 38%;
+  padding-left: 33%;
   padding-top: 24%;
   font-size: 12px;
+  line-height: 20px;
 }
 
 .app-2-div {
@@ -146,12 +152,11 @@ hr {
 
 .app-3-title {
   font-family: 'Abel', sans-serif;
-  color: white;
+  color: #93BAE3;
   position: absolute;
-  z-index: 7;
   width: 350px;
   line-height: 25px;
-  padding-left: 45%;
+  padding-left: 43.5%;
   padding-top: 30%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
@@ -160,11 +165,56 @@ hr {
 .app-3-desc {
   width: 264px;
   text-align: right;
-  padding-left: 38%;
+  padding-left: 33%;
   padding-top: 34%;
   font-size: 12px;
+  line-height: 20px;
 }
 
 .app-3-div {
   margin-top: 100px;
+}
+
+.bottom-pattern {
+  position: absolute;
+  padding-left: 59%;
+  width: auto;
+  padding-top: 15%;
+}
+
+#menu {
+  position: fixed;
+  left: 0;
+  top: 30%;
+  width: 8em;
+  margin-top: -2.5em;
+  z-index: 1;
+  font-family: 'Julius Sans One', sans-serif;
+  list-style-type: none;
+  line-height: 70px;
+  color: white;
+  font-size: 11px;
+}
+
+#menu > li > a {
+  color: white;
+  text-decoration: none;
+}
+
+#menu > li > a:hover {
+  color: #93BAE3;
+  text-decoration: underline;
+}
+
+#menu > li > a:active {
+  font-size: 16px;
+}
+
+.complete {
+  color: #93BAE3 !important;
+  text-decoration: underline !important;
+}
+
+html {
+  scroll-behavior: smooth;
 }
