--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ body {
   margin-right: -50%;
   transform: translate(-50%, 50%);
   margin: 0;
+  opacity: 0.4;
 }
 
 .background-image {
@@ -88,9 +89,9 @@ p {
 
 #iphone-image {
   position: relative;
-  width: 50%;
-  top: 768px;
-  padding-left: 50%;
+  width: 28%;
+  top: 800px;
+  padding-left: 60%;
 }
 
 hr {
@@ -121,7 +122,7 @@ hr {
   text-align: right;
   padding-left: 33%;
   padding-top: 14%;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 20px;
 }
 
@@ -142,7 +143,7 @@ hr {
   text-align: right;
   padding-left: 33%;
   padding-top: 24%;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 20px;
 }
 
@@ -167,7 +168,7 @@ hr {
   text-align: right;
   padding-left: 33%;
   padding-top: 34%;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 20px;
 }
 
