--- a/main.css
+++ b/main.css
@@ -23,10 +23,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 80%;
-  height: 511.5px;
   position:absolute;
-  top: 0px;
-  left: 0px;
   top: 50%;
   left: 50%;
   margin-right: -50%;
@@ -47,11 +44,11 @@ body {
   color: #93BAE3;
   font-family: 'Abel', sans-serif;
   font-size: 48px;
-  line-height: 48px;
   font-weight: 400;
   position: absolute;
   padding-left: 59.3%;
   padding-top: 5%;
+  top: 120%;
 }
 
 #heading-2 {
@@ -63,6 +60,7 @@ body {
   position: absolute;
   padding-left: 59.3%;
   padding-top: 5%;
+  top: 240%;
 }
 
 #heading-3 {
@@ -74,6 +72,7 @@ body {
   position: absolute;
   padding-left: 59.3%;
   padding-top: 5%;
+  top: 480%;
 }
 
 p {
@@ -90,7 +89,7 @@ p {
 #iphone-image {
   position: relative;
   width: 28%;
-  top: 800px;
+  top: 810px;
   padding-left: 60%;
 }
 
