--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
   font-size: 36px;
   line-height: 48px;
   font-weight: 400;
-  position: absolute;
   padding-left: 25%;
   padding-right: 25%;
   padding-top: 5%;
@@ -22,164 +21,178 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
-  position:absolute;
-  top: 50%;
+  width: 100%;
+  opacity: 0.3;
+  z-index: -1;
+}
+
+.title {
+  position: absolute;
+  top: 30%;
   left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, 50%);
-  margin: 0;
-  opacity: 0.4;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  z-index: 2;
 }
 
 .background-image {
   width: 100%;
-  display: block;
-  position: relative;
-  top: 768px;
+  position: sticky;
   opacity: 0.4;
 }
 
 #heading-1 {
+  position: absolute;
+  top: 125%;
+  padding-left: 60%;
+  padding-top: 5%;
   color: #93BAE3;
   font-family: 'Abel', sans-serif;
   font-size: 48px;
   font-weight: 400;
+}
+
+.problem {
   position: absolute;
-  padding-left: 59.3%;
+  top: 150%;
+  padding-left: 60%;
   padding-top: 5%;
-  top: 120%;
+  width: 32%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 22px;
+  line-height: 28px;
 }
 
 #heading-2 {
-  color: #93BAE3;
-  font-family: 'Abel', sans-serif;
-  font-size: 48px;
-  line-height: 48px;
-  font-weight: 400;
   position: absolute;
-  padding-left: 59.3%;
-  padding-top: 5%;
-  top: 240%;
-}
-
-#heading-3 {
-  color: #93BAE3;
-  font-family: 'Abel', sans-serif;
-  font-size: 48px;
-  line-height: 48px;
-  font-weight: 400;
-  position: absolute;
-  padding-left: 59.3%;
-  padding-top: 5%;
-  top: 480%;
-}
-
-p {
-  color: white;
-  position: absolute;
-  width: 435px;
-  line-height: 25px;
+  top: 250%;
   padding-left: 60%;
-  padding-top: 22%;
-  font-size: 18px;
-  font-family: 'Karla', sans-serif;
+  padding-top: 5%;
+  color: #93BAE3;
+  font-family: 'Abel', sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+}
+
+.solution {
+  position: absolute;
+  top: 290%;
+  padding-left: 60%;
+  padding-top: 5%;
+  width: 32%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 22px;
+  line-height: 28px;
 }
 
 #iphone-image {
   position: relative;
+  top: 500%;
   width: 28%;
-  top: 810px;
   padding-left: 60%;
 }
 
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  position: relative;
-  top: 150px;
-  width: 6%;
-  left: 50px;
-}
-
 .app-1-title {
-  font-family: 'Abel', sans-serif;
-  color: #93BAE3;
   position: absolute;
-  width: 350px;
-  line-height: 25px;
-  padding-left: 40%;
+  top: 370%;
+  padding-left: 28%;
   padding-top: 10%;
+  color: #93BAE3;
+  width: 32%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
 }
 
 .app-1-desc {
-  width: 264px;
-  text-align: right;
-  padding-left: 33%;
-  padding-top: 14%;
-  font-size: 13px;
-  line-height: 20px;
+  position: absolute;
+  top: 395%;
+  padding-left: 28%;
+  width: 20%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .app-2-title {
-  font-family: 'Abel', sans-serif;
-  color: #93BAE3;
   position: absolute;
-  width: 350px;
-  line-height: 25px;
-  padding-left: 40%;
-  padding-top: 20%;
+  top: 395%;
+  padding-left: 28%;
+  padding-top: 10%;
+  color: #93BAE3;
+  width: 32%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
 }
 
 .app-2-desc {
-  width: 264px;
-  text-align: right;
-  padding-left: 33%;
-  padding-top: 24%;
-  font-size: 13px;
-  line-height: 20px;
-}
-
-.app-2-div {
-  margin-top: 50px;
+  position: absolute;
+  top: 420%;
+  padding-left: 28%;
+  width: 20%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .app-3-title {
-  font-family: 'Abel', sans-serif;
-  color: #93BAE3;
   position: absolute;
-  width: 350px;
-  line-height: 25px;
-  padding-left: 43.5%;
-  padding-top: 30%;
+  top: 420%;
+  padding-left: 28%;
+  padding-top: 10%;
+  color: #93BAE3;
+  width: 32%;
   font-size: 24px;
   font-family: 'Abel', sans-serif;
 }
 
 .app-3-desc {
-  width: 264px;
-  text-align: right;
-  padding-left: 33%;
-  padding-top: 34%;
-  font-size: 13px;
-  line-height: 20px;
+  position: absolute;
+  top: 445%;
+  padding-left: 28%;
+  width: 20%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
 }
 
-.app-3-div {
-  margin-top: 100px;
+#heading-3 {
+  position: absolute;
+  top: 475%;
+  padding-left: 60%;
+  padding-top: 5%;
+  color: #93BAE3;
+  font-family: 'Abel', sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+}
+
+.benefits {
+  position: absolute;
+  top: 525%;
+  padding-left: 60%;
+  padding-top: 5%;
+  color: white;
+  font-family: brandon-grotesque, sans-serif;
+  font-style: normal;
+  font-size: 22px;
 }
 
 .bottom-pattern {
   position: absolute;
-  padding-left: 59%;
-  width: auto;
-  padding-top: 15%;
+  top: 510%;
+  padding-left: 59.2%;
 }
 
 #menu {
@@ -210,11 +223,36 @@ hr {
   font-size: 16px;
 }
 
-.complete {
+.current {
   color: #93BAE3 !important;
   text-decoration: underline !important;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+.typewriter {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+  typing 3.5s steps(30, end),
+  blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 50% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
 }
